--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Go template
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -28,20 +26,8 @@ _testmain.go
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# external packages folder
+# External packages folder
 vendor/
 
-.gitignore
-.idea/Hello.iml
-.idea/goLibraries.xml
-.idea/inspectionProfiles/
-.idea/libraries/
-.idea/modules.xml
-.idea/workspace.xml
-bin/
-pkg/
-src/Constants.go
-src/Goroutines.go
-src/HelloWorld.go
-src/Values.go
-src/Variables.go
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
